--- a/ChangeLog
+++ b/ChangeLog
@@ -15,5 +15,6 @@
 1.5.0.20607 Refined source structure.
 1.5.1.20613 Supported update.xml.
 1.5.2.20615 Supported dragging object using touchmove (fix gree::3560).
-1.5.2.20616 ongesturestart bypass is enabled on iDevice (fix gree::55446).
+1.5.2.20616 ongesturestart bypass is enabled only on iDevice (fix gree::55446).
 1.5.3.20616 sets "overflow:visible" to body (fix gree::54690).
+1.5.4.20617 sets "color:black" to option (fix several including gree::tknight).
