--- a/ChangeLog
+++ b/ChangeLog
@@ -19,3 +19,4 @@
 1.5.3.20616 sets "overflow:visible" to body (fix gree::54690).
 1.5.4.20617 sets "color:black" to option (fix several including gree::tknight).
 1.5.5.20617 Now text is selectable.
+1.5.6.20618 Better handling of changedTouches(I hope) (fix gree::53754).
