--- a/ChangeLog
+++ b/ChangeLog
@@ -21,3 +21,4 @@
 1.5.5.20617 Now text is selectable.
 1.5.6.20618 Better handling of changedTouches(I hope) (fix gree::53754).
 1.5.7.20628 Modified ontouchstart bypass (fix gree::3451).
+1.5.8.20703 Improved document.documentElement.* handling. Initial Safari port.
