--- a/ChangeLog
+++ b/ChangeLog
@@ -22,3 +22,4 @@
 1.5.6.20618 Better handling of changedTouches(I hope) (fix gree::53754).
 1.5.7.20628 Modified ontouchstart bypass (fix gree::3451).
 1.5.8.20703 Improved document.documentElement.* handling. Initial Safari port.
+1.5.9.20706 Added browserUA version.
