--- a/ChangeLog
+++ b/ChangeLog
@@ -27,3 +27,4 @@
 1.6.1.20719 Fixed ctouch_inner.rb.
 1.6.2.20720 Fixed fillText() and click() issue (fix mbga's ExGame and 12008259).
 1.6.3.20720 Better fixing fillText().
+1.6.4.20720 Allows multiple cTouch installation again...
