--- a/ChangeLog
+++ b/ChangeLog
@@ -28,3 +28,4 @@
 1.6.2.20720 Fixed fillText() and click() issue (fix mbga's ExGame and 12008259).
 1.6.3.20720 Better fixing fillText().
 1.6.4.20720 Allows multiple cTouch installation again...
+1.6.4.20721 Fixed some (strange) warnings...
