--- a/ChangeLog
+++ b/ChangeLog
@@ -29,3 +29,4 @@
 1.6.3.20720 Better fixing fillText().
 1.6.4.20720 Allows multiple cTouch installation again...
 1.6.4.20721 Fixed some (strange) warnings...
+1.6.5.20727 Fixed zoom handling (fix gree::3241).
