--- a/ChangeLog
+++ b/ChangeLog
@@ -36,3 +36,6 @@
 * "Resurrection spell": You can backup and restore current configuration.
 1.7.1.20810 Fixed fatal bug of standard edition. Never use 1.7.0.20810, which is malfuncional.
 1.7.2.20810 Avoided mis-disabling after reordering/deleting list.
+1.7.3.20824
+* Added many User-Agents including JellyBean and iOS6.
+* Fixed navigator.appVersion.
