--- a/ChangeLog
+++ b/ChangeLog
@@ -39,7 +39,10 @@
 1.7.3.20824
 * Added many User-Agents including JellyBean and iOS6.
 * Fixed navigator.appVersion.
-1.7.4.20xxx
+1.7.4.20902
 * Fixed GUI. Now textboxes aren't bugged regardless of window width.
 * Combined ctouch_external.cgi to ctouch_webrick.rb.
 * Configuring CGI isn't required anymore as long as you have Ruby on your machine.
+* Windows users can now use Ocra-packed exe.
+* Now that crxes are hosted on webstore, standard's official support is dropped.
+* Adds e.keyCode=0 when firing touch event (fix gree::3392).
