--- a/ChangeLog
+++ b/ChangeLog
@@ -54,3 +54,4 @@
 * Successfully killed other JavaScript mouse events (fix gree::51612).
 1.7.7.20903 Fixed suppressing mouse events...
 1.7.7.20904 Re-released as stable.
+1.7.8.20904 Interrupt mouseup too.
