--- a/ChangeLog
+++ b/ChangeLog
@@ -56,3 +56,4 @@
 1.7.7.20904 Re-released as stable.
 1.7.8.20904 Interrupt mouseup too.
 1.7.9.20912 Fixed createTouch(List) error (fix gree::3429).
+1.8.0.20913 Fixed a few properties.
