--- a/ChangeLog
+++ b/ChangeLog
@@ -57,3 +57,4 @@
 1.7.8.20904 Interrupt mouseup too.
 1.7.9.20912 Fixed createTouch(List) error (fix gree::3429).
 1.8.0.20913 Fixed a few properties.
+1.8.1.20913 Fixed ontouchstart bypass again (fix gree::3429).
