--- a/ChangeLog
+++ b/ChangeLog
@@ -59,3 +59,4 @@
 1.8.0.20913 Fixed a few properties.
 1.8.1.20913 Fixed ontouchstart bypass again (fix gree::3429).
 1.8.2.20913 Fixed ontouchmove/end and ongestureend bypass.
+1.8.3.20915 Introduced filesystem edition.
