--- a/ChangeLog
+++ b/ChangeLog
@@ -72,3 +72,6 @@
 * Fixed Reel behavior fully. (fix gree::95).
 * Remove sdch from Accept-Encoding if not Chrome (except browserUA edition).
 * Touch events aren't fired if the target is object/embed.
+1.8.7.20930
+* Remove sdch from Accept-Encoding if not Chrome also in browserUA edition, if --user-agent is used.
+* Show browser action title.
