--- a/ChangeLog
+++ b/ChangeLog
@@ -83,3 +83,4 @@
 * Fixed window.chrome handling in Safari.
 * Reverted click event handling due to some lovely event listeners.
 1.9.0.21106 Fixed displaying issue again.
+1.9.0.21113 Updated UA list. Improved Makefile.
