--- a/ChangeLog
+++ b/ChangeLog
@@ -85,3 +85,4 @@
 1.9.0.21106 Fixed displaying issue again.
 1.9.0.21113 Updated UA list. Improved Makefile.
 1.9.0.21114 Tweaked UA list. Hide Flash in Android Chrome.
+1.9.0.21117 Updated UA list. Fixed support programs.
