--- a/ChangeLog
+++ b/ChangeLog
@@ -93,3 +93,4 @@
 * Slightly smaller binary.
 1.9.2.21119 Fixed ctouch_inner.rb optimization.
 1.9.3.21120 Fixed hiding Flash.
+1.9.3.21121 Optimized ctouch_inner.rb.
