--- a/ChangeLog
+++ b/ChangeLog
@@ -94,4 +94,4 @@
 1.9.2.21119 Fixed ctouch_inner.rb optimization.
 1.9.3.21120 Fixed hiding Flash.
 1.9.3.21121 Optimized ctouch_inner.rb.
-1.9.4.21201 Added easy Flash detection.
+1.9.4.21201 Added easy Flash detection (for versions with GUI).
