next update will eliminate fillText workaround of ExGame

--- a/ChangeLog
+++ b/ChangeLog
@@ -95,3 +95,5 @@
 1.9.3.21120 Fixed hiding Flash.
 1.9.3.21121 Optimized ctouch_inner.rb.
 1.9.4.21201 Added easy Flash detection (for versions with GUI).
+1.9.5.212xx
+* Eliminated fillText workaround (ExGame bug).
