--- a/ChangeLog
+++ b/ChangeLog
@@ -103,3 +103,4 @@
 * Optimized Background page.
 * Added a new option to disable generating touch events.
 * Introduced new cTouch external daemon, which works as Chrome application.
+2.0.2.21213 Introduced config_version mechanism.
