--- a/ChangeLog
+++ b/ChangeLog
@@ -109,3 +109,4 @@
 2.0.5.21220 window.outer* should be used as window.screen.*
 2.0.6.30115 External Daemon Chrome is supported officially and uploaded to webstore.
 2.0.7.30115 Fix regression in filesystem version.
+2.0.8.30129 Added downloading ctouch_ualist.json.
