--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,10 @@
 1.0.1.20411 Added modifying UA. Released internally to @Akazami.
 1.0.2.20413 Extracted imitation.js to combine with mouse2touch.
 1.1.0.20429 Workaround to call x.ontouchstart(). Click with holding shift key (fix gree::3429).
-1.2.0.20430 imitation.js is now combined to mouse2touch to generate brand-new cTouch addon. Easy GUI added.
+1.2.0.20430
+* cTouch r1: First public release.
+* imitation.js is now combined to mouse2touch to generate brand-new cTouch addon.
+* Easy GUI added.
 1.2.1.20501 Fixed a bug in imitation.js; now navigator.* are overwritten correctly (fix gree::452).
 1.3.0.20501 Using workaround to use sessionStorage... (first non-beta)
 1.3.1.20504 Currently I should use Linux arm... (fix mbga::dp)
@@ -31,7 +34,7 @@
 1.6.4.20721 Fixed some (strange) warnings...
 1.6.5.20727 Fixed zoom handling (fix gree::3241).
 1.7.0.20810
-* GUI of standard and external edition is completely rewritten.
+* cTouch r2: GUI of standard and external edition is completely rewritten.
 * You can have as many User-Agents as you want. The list is also sortable thanks to jQuery UI.
 * "Resurrection spell": You can backup and restore current configuration.
 1.7.1.20810 Fixed fatal bug of standard edition. Never use 1.7.0.20810, which is malfuncional.
@@ -40,11 +43,11 @@
 * Added many User-Agents including JellyBean and iOS6.
 * Fixed navigator.appVersion.
 1.7.4.20902
+* Now that crxes are hosted on webstore, standard's official support is dropped.
 * Fixed GUI. Now textboxes aren't bugged regardless of window width.
 * Combined ctouch_external.cgi to ctouch_webrick.rb.
 * Configuring CGI isn't required anymore as long as you have Ruby on your machine.
 * Windows users can now use Ocra-packed exe.
-* Now that crxes are hosted on webstore, standard's official support is dropped.
 * Adds e.keyCode=0 when firing touch event (fix gree::3392).
 1.7.5.20902
 * Stripped GPL block.
@@ -111,3 +114,9 @@
 2.0.7.30115 Fix regression in filesystem version.
 2.0.8.30129 Added downloading ctouch_ualist.json.
 2.0.9.30208 Added "install createTouch?" option. Disabling it will fix gree::1.
+2.1.0.30301 Shutdown FastClick (fix gree::58737).
+
+[Private branch: not public release]
+2.5.0.30213 Workaround for patching iframe.
+2.5.1.30219 Workaround for patching iframe again.
+2.x.x.xxxxx [TBA] cTouch r3: revert iframe handling [todo]
