--- a/ChangeLog
+++ b/ChangeLog
@@ -115,8 +115,7 @@
 2.0.8.30129 Added downloading ctouch_ualist.json.
 2.0.9.30208 Added "install createTouch?" option. Disabling it will fix gree::1.
 2.1.0.30301 Shutdown FastClick (fix gree::58737).
+2.1.1.30301 Workaround for patching iframe (3rd try).
 
 [Private branch: not public release]
-2.5.0.30213 Workaround for patching iframe.
-2.5.1.30219 Workaround for patching iframe again.
-2.x.x.xxxxx [TBA] cTouch r3: revert iframe handling [todo]
+2.5.x.xxxxx [TBA] cTouch r3: revert iframe handling [todo]
