--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 1.0.2.20413 Extracted imitation.js to combine with mouse2touch.
 1.1.0.20429 Workaround to call x.ontouchstart(). Click with holding shift key (fix gree::3429).
 1.2.0.20430
-* cTouch r1: First public release.
+* cTouch r1: First public release (hosted on Dropbox).
 * imitation.js is now combined to mouse2touch to generate brand-new cTouch addon.
 * Easy GUI added.
 1.2.1.20501 Fixed a bug in imitation.js; now navigator.* are overwritten correctly (fix gree::452).
@@ -15,7 +15,9 @@
 1.4.1.20522 ontouchstart bypass (fix gree::51157).
 1.4.1.20527 ongesturestart bypass (fix gree::3221 iDevice).
 1.4.1.20601 Fixed and optimized calling x.ontouchstart() (you still need to hold shift key) (fix gree::3429 fever).
-1.5.0.20607 Refined source structure.
+1.5.0.20607
+* Refined source structure.
+* Hosted on GoogleCode.
 1.5.1.20613 Supported update.xml.
 1.5.2.20615 Supported dragging object using touchmove (fix gree::3560).
 1.5.2.20616 ongesturestart bypass is enabled only on iDevice (fix gree::55446).
@@ -117,6 +119,7 @@
 2.1.0.30301 Shutdown FastClick (fix gree::58737).
 2.1.1.30301 Workaround for patching iframe (3rd try).
 2.1.2.30304 Integrated sgfaker (activated only on sgviewer.com).
+2.1.3.30305 Fixed document.appendChild() handling.
 
 [Private branch: not public release]
 2.5.x.xxxxx [TBA] cTouch r3: revert iframe handling [todo]
