--- a/ChangeLog
+++ b/ChangeLog
@@ -120,7 +120,8 @@
 2.1.1.30301 Workaround for patching iframe (3rd try).
 2.1.2.30304 Integrated sgfaker (activated only on sgviewer.com).
 2.1.3.30305 Fixed document.appendChild() handling (fix gree::1).
-2.1.4.30311 (hidden release) Merged sgviewer 0.37.
+2.1.4.30311 Merged sgviewer 0.37.
+2.1.4.30425 Reverted. Also fixed the issue opening "Plugins Page".
 
 [Private branch: not public release]
 2.5.x.xxxxx [TBA] cTouch r3: revert iframe handling [todo]
