--- a/ChangeLog
+++ b/ChangeLog
@@ -122,6 +122,7 @@
 2.1.3.30305 Fixed document.appendChild() handling (fix gree::1).
 2.1.4.30311 Merged sgviewer 0.37.
 2.1.4.30425 Reverted. Also fixed the issue opening "Plugins Page".
-
-[Private branch: not public release]
-2.5.x.xxxxx [TBA] cTouch r3: revert iframe handling [todo]
+2.5.0.30727
+* cTouch r3: iframe hijacking patch isn't applied on Safari or Chrome>=28.
+* Still alright on Chromium X2, since it is based on version 28.
+* Fixed build system to generate PKCS8 pem.
