--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,12 @@
+[mpv]
 1.0.0.20409 Patched mpw in order not to "attack" mpw.jp.
 1.0.1.20411 Added modifying UA. Released internally to @Akazami.
 1.0.2.20413 Extracted imitation.js to combine with mouse2touch.
 1.1.0.20429 Workaround to call x.ontouchstart(). Click with holding shift key (fix gree::3429).
+
+[cTouch r1]
 1.2.0.20430
-* cTouch r1: First public release (hosted on Dropbox).
+* First public release (hosted on Dropbox).
 * imitation.js is now combined to mouse2touch to generate brand-new cTouch addon.
 * Easy GUI added.
 1.2.1.20501 Fixed a bug in imitation.js; now navigator.* are overwritten correctly (fix gree::452).
@@ -35,8 +38,10 @@
 1.6.4.20720 Allows multiple cTouch installation again...
 1.6.4.20721 Fixed some (strange) warnings...
 1.6.5.20727 Fixed zoom handling (fix gree::3241).
+
+[cTouch r2]
 1.7.0.20810
-* cTouch r2: GUI of standard and external edition is completely rewritten.
+* GUI of standard and external edition is completely rewritten.
 * You can have as many User-Agents as you want. The list is also sortable thanks to jQuery UI.
 * "Resurrection spell": You can backup and restore current configuration.
 1.7.1.20810 Fixed fatal bug of standard edition. Never use 1.7.0.20810, which is malfuncional.
@@ -122,8 +127,10 @@
 2.1.3.30305 Fixed document.appendChild() handling (fix gree::1).
 2.1.4.30311 Merged sgviewer 0.37.
 2.1.4.30425 Reverted. Also fixed the issue opening "Plugins Page".
+
+[cTouch r3]
 2.5.0.30727
-* cTouch r3: iframe hijacking patch isn't applied on Safari or Chrome>=28.
+* iframe hijacking patch isn't applied on Safari or Chrome>=28.
 * Still alright on Chromium X2, since it is based on version 28.
 * Fixed build system to generate PKCS8 pem.
 2.5.1.30805 Modified window.ontouchstart handling. Chromium X2 can play gree::1 at least.
@@ -131,4 +138,9 @@
 2.5.3.40119
 * Modified window.ontouchmove/window.ontouchend handling (fix ameba::kamefarm etc).
 * This change might have some issues with some games. Tell me if you find some.
-2.5.4.40722 Tweaked generated iframe handling.
+
+[cTouch r4]
+2.5.4.40722
+* Tweaked generated iframe handling.
+* From this version, Chrome 20-36 support is unofficial. 37+ is officially supported.
+2.5.5.40904 Migrated to sourceforge. Released as binary.
