--- a/ChangeLog
+++ b/ChangeLog
@@ -145,3 +145,4 @@
 * From this version, Chrome 20-36 support is unofficial. 37+ is officially supported.
 2.5.5.40904 Migrated to sourceforge. Released as binary.
 2.5.6.50511 Updated UA list. You can unset UA from option page.
+2.5.7.50517 Fixed official touch event detection.
